Updated model - supporting Project Management Club
